write viterbi algo

--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -127,7 +127,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -139,18 +138,31 @@
    "outputs": [],
    "source": [
     "class algorithmViterbi(baseAlgo):\n",
-    "    def __init__(self, data):\n",
-    "        baseAlgo.__init__(self)\n",
+    "    def __init__(self, data, fairDiceStateProbability,\n",
+    "                 unfairDiceStateProbability, unfairDice, fairDice = None):\n",
+    "        baseAlgo.__init__(self, data, fairDiceStateProbability,\n",
+    "                 unfairDiceStateProbability, unfairDice, fairDice = None)\n",
     "        self.v = [0 for i in range(self.L)]\n",
     "        self.v[0] = 1\n",
     "        \n",
-    "    def step(self, index):\n",
+    "        self.pathProbabilities = []\n",
+    "        self.ptrStates = []\n",
+    "        \n",
+    "        \n",
+    "    def ptr(self):\n",
     "        pass\n",
+    "        \n",
+    "    def _stepRecursion(self, index, state, probabilityPerState):\n",
+    "        probabilityObservationsInState = probabilityPerState[data[i]-1]\n",
+    "        probability = 0\n",
+    "        argmax = 0\n",
     "    \n",
     "    def __call__(self):\n",
     "        # Рекурсия\n",
     "        for i in range(1,self.L):\n",
-    "            self.step(i)\n",
+    "            for state, probability in zip(['Fair','Unfair'],[self.fairDice, self.unfairDice]):\n",
+    "                self._stepRecursion(i,state,probability)\n",
+    "                \n",
     "        # Завершение\n",
     "        pass\n",
     "        # Обратный ход\n",
@@ -171,8 +183,10 @@
    "outputs": [],
    "source": [
     "class forwardAlgorithm(baseAlgo):\n",
-    "    def __init__(self, data):\n",
-    "        baseAlgo.__init__(self,data)\n",
+    "    def __init__(self, data, fairDiceStateProbability,\n",
+    "                 unfairDiceStateProbability, unfairDice, fairDice = None):\n",
+    "        baseAlgo.__init__(self, data, fairDiceStateProbability,\n",
+    "                 unfairDiceStateProbability, unfairDice, fairDice = None)\n",
     "        pass\n",
     "    \n",
     "    def step(self):\n",
@@ -196,8 +210,10 @@
    "outputs": [],
    "source": [
     "class backwardAlgorithm(baseAlgo):\n",
-    "    def __init__(self, data):\n",
-    "        baseAlgo.__init__(self,data)\n",
+    "    def __init__(self, data, fairDiceStateProbability,\n",
+    "                 unfairDiceStateProbability, unfairDice, fairDice = None):\n",
+    "        baseAlgo.__init__(self, data, fairDiceStateProbability,\n",
+    "                 unfairDiceStateProbability, unfairDice, fairDice = None)\n",
     "        pass\n",
     "    \n",
     "    def step(self):\n",
