--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -149,8 +149,9 @@
     "        self.ptrStates = []\n",
     "        \n",
     "        \n",
-    "    def ptr(self):\n",
-    "        pass\n",
+    "    def ptr(self,index, state):\n",
+    "        Fair2Current, Unfair2Current = 0,0 # Определить с помощью state и self.fairDiceStateProbability/self.unfairDiceStateProbability\n",
+    "        return 'Fair' if self.pathProbabilities[index-1][0]*Fair2Current > self.pathProbabilities[index-1][1]*Unfair2Current else 'Unfar'\n",
     "        \n",
     "    def _stepRecursion(self, index, state, probabilityPerState):\n",
     "        probabilityObservationsInState = probabilityPerState[data[i]-1]\n",
@@ -160,6 +161,8 @@
     "    def __call__(self):\n",
     "        # Рекурсия\n",
     "        for i in range(1,self.L):\n",
+    "            self.pathProbabilitie.append([])\n",
+    "            self.ptrStates.append([])\n",
     "            for state, probability in zip(['Fair','Unfair'],[self.fairDice, self.unfairDice]):\n",
     "                self._stepRecursion(i,state,probability)\n",
     "                \n",
