--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -149,14 +149,20 @@
     "        self.ptrStates = []\n",
     "        \n",
     "        \n",
-    "    def ptr(self,index, state):\n",
-    "        Fair2Current, Unfair2Current = 0,0 # Определить с помощью state и self.fairDiceStateProbability/self.unfairDiceStateProbability\n",
+    "    def ptr(self,index, Fair2Current, Unfair2Current):\n",
     "        return 'Fair' if self.pathProbabilities[index-1][0]*Fair2Current > self.pathProbabilities[index-1][1]*Unfair2Current else 'Unfar'\n",
     "        \n",
     "    def _stepRecursion(self, index, state, probabilityPerState):\n",
     "        probabilityObservationsInState = probabilityPerState[data[i]-1]\n",
-    "        probability = 0\n",
-    "        argmax = 0\n",
+    "        ###\n",
+    "        # Определить с помощью state и self.fairDiceStateProbability/self.unfairDiceStateProbability\n",
+    "        Fair2Current, Unfair2Current = 0,0 \n",
+    "        ###\n",
+    "        probability = probabilityPerState * (max(self.pathProbabilities[index-1][0]*Fair2Current,self.pathProbabilities[index-1][1]*Unfair2Current))\n",
+    "        argmax = self.ptr(index, Fair2Current, Unfair2Current)\n",
+    "        \n",
+    "        self.pathProbabilities.append(probability)\n",
+    "        self.ptrStates[-1].append(argmax)\n",
     "    \n",
     "    def __call__(self):\n",
     "        # Рекурсия\n",
