--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from generator import Croupier"
    ]
   },
@@ -120,10 +121,19 @@
     "        if fairDice == None: self.fairDice = [1/6 for i in range(6)]\n",
     "        else: self.fairDice = fairDice\n",
     "        self.unfairDice = unfairDice\n",
+    "        \n",
+    "        # Возможно стоит сделать вида \n",
+    "        self.toFairState = np.array([fairDiceStateProbability[0],unfairDiceStateProbability[0]])\n",
+    "        self.toUnfariState = np.array([fairDiceStateProbability[1],unfairDiceStateProbability[1]])\n",
+    "        \n",
     "        self.fairDiceStateProbability = fairDiceStateProbability\n",
     "        self.unfairDiceStateProbability = unfairDiceStateProbability\n",
     "        \n",
-    "        self.path = []"
+    "        self.states = ['Fair','Unfair']\n",
+    "        self.dices = [self.fairDice,self.unfairDice]\n",
+    "        self.transitions = [self.toFairState, self.toUnfariState]\n",
+    "        \n",
+    "        self.path = [] #Вынести, так как прямой и обратной ход для другого"
    ]
   },
   {
@@ -196,21 +206,34 @@
     "                 unfairDiceStateProbability, unfairDice, fairDice = None):\n",
     "        baseAlgo.__init__(self, data, fairDiceStateProbability,\n",
     "                 unfairDiceStateProbability, unfairDice, fairDice = None)\n",
-    "        pass\n",
+    "        \n",
+    "        self.f = np.array([])\n",
+    "        self.pathProbability = None\n",
     "    \n",
-    "    def step(self):\n",
-    "        pass\n",
+    "    def step(self, index):\n",
+    "        self.f.append([])\n",
+    "        for transitionProbability, probability in zip(self.transitions, self.dices):\n",
+    "            observedProbability = probability[self.data[index]]\n",
+    "            previuosState = self.f[index-1]\n",
+    "            \"\"\"\n",
+    "            observedProbability: вероятсность наблюдения при текущем состояние\n",
+    "            transitionProbability: вероятность перехода с кубика на кубик\n",
+    "            \"\"\"\n",
+    "            probability = observedProbability * sum(previuosState * transitionProbability)\n",
+    "            self.f[-1].append(probability)\n",
     "    \n",
     "    def __call__(self):\n",
-    "        pass"
+    "        if self.pathProbability == None: self.initialization()\n",
+    "        return self.pathProbability\n",
+    "    \n",
+    "    def initialization(self):\n",
+    "        # Init\n",
+    "        self.f.append([1,0]) # Не уверен\n",
+    "        # Recursion\n",
+    "        for i in range(1,self.L):\n",
+    "            self.step(i)\n",
+    "        self.pathProbability = sum(self.f[-1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -229,7 +252,10 @@
     "        pass\n",
     "    \n",
     "    def __call__(self):\n",
-    "        pass "
+    "        pass\n",
+    "    \n",
+    "    def initialization(self):\n",
+    "        pass"
    ]
   },
   {
