--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -246,26 +246,32 @@
     "                 unfairDiceStateProbability, unfairDice, fairDice = None):\n",
     "        baseAlgo.__init__(self, data, fairDiceStateProbability,\n",
     "                 unfairDiceStateProbability, unfairDice, fairDice = None)\n",
-    "        pass\n",
+    "        \n",
+    "        self.b = np.array([])\n",
+    "        self.pathProbability = None\n",
     "    \n",
-    "    def step(self):\n",
-    "        pass\n",
+    "    def step(self, index):\n",
+    "        self.b.append([])\n",
+    "        for transitionProbability, probability in zip(self.transitions, self.dices):\n",
+    "            observedProbability = probability[self.data[index]] # Кажется в этом случае нельзя так просто это сделать\n",
+    "            nextState = self.b[index-1]\n",
+    "            \n",
+    "            probability = None #Как ее считать тут??\n",
+    "            self.b[-1].append(probability)\n",
     "    \n",
     "    def __call__(self):\n",
-    "        pass\n",
+    "        if self.pathProbability == None: self.initialization()\n",
+    "        return self.pathProbability\n",
     "    \n",
     "    def initialization(self):\n",
+    "        #Init self.L - 1\n",
+    "        pass\n",
+    "        #Recursion\n",
+    "        for i in range(2,self.L): # С двойки?\n",
+    "            self.step(i)\n",
+    "        # Finish # перевернуть b\n",
+    "        self.b = self.b[::-1]\n",
     "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class BaumWelchTraining():\n",
-    "    pass"
    ]
   },
   {
