finish backward algo

--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -252,11 +252,13 @@
     "    \n",
     "    def step(self, index):\n",
     "        self.b.append([])\n",
-    "        for transitionProbability, probability in zip(self.transitions, self.dices):\n",
-    "            observedProbability = probability[self.data[index]] # Кажется в этом случае нельзя так просто это сделать\n",
+    "        for transitionProbability in self.transitions: # first fair then unfair\n",
+    "            observedProbability = np.array([])\n",
+    "            for probability in self.dices\n",
+    "                observedProbability.append(probability[self.data[index]])\n",
     "            nextState = self.b[index-1]\n",
     "            \n",
-    "            probability = None #Как ее считать тут??\n",
+    "            probability = sum(transitionProbability * observedProbability * nextState)\n",
     "            self.b[-1].append(probability)\n",
     "    \n",
     "    def __call__(self):\n",
@@ -276,10 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3, 16])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1,2])*np.array([3,4])*np.array([1,2])"
+   ]
   },
   {
    "cell_type": "code",
