--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -193,7 +193,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class algorithmViterbi(baseAlgo):\n",
+    "    def __init__(self, data, fairDiceStateProbability,\n",
+    "                 unfairDiceStateProbability, unfairDice, fairDice = None):\n",
+    "        baseAlgo.__init__(self, data, fairDiceStateProbability,\n",
+    "                 unfairDiceStateProbability, unfairDice, fairDice = None)\n",
+    "        self.v = np.array([])\n",
+    "        self.v.append([1,0]) # Не уверен, вынести в initilization\n",
+    "        \n",
+    "        # self.pathProbabilities = []\n",
+    "        # self.ptrStates = []\n",
+    "        self.ptr = np.array([])\n",
+    "        \n",
+    "        \n",
+    "    def _ptr(self,index, Fair2Current, Unfair2Current):\n",
+    "        return 'F' if self.pathProbabilities[index-1][0]*Fair2Current > self.pathProbabilities[index-1][1]*Unfair2Current else 'U'\n",
+    "       \n",
+    "    def step(self):\n",
+    "        self.v.append([])\n",
+    "        self.ptrStates.append([])\n",
+    "        for transitionProbability, probability in zip(self.transitions, self.dices):\n",
+    "            observedProbability = probability[self.data[i]-1]\n",
+    "            previuosState = self.v[index-1]\n",
+    "            \n",
+    "            probability = observedProbability * np.max(previuosState*transitionProbability)\n",
+    "            ptr = 'F' if np.argmax(previuosState*transitionProbability) == 0 else 'U'\n",
+    "            \n",
+    "            self.v[-1].append(probability)\n",
+    "            self.ptr[-1].append(ptr)\n",
+    "            \n",
+    "            \n",
+    "    \n",
+    "    def _stepRecursion(self, index,probabilityPerState):\n",
+    "        probabilityObservationsInState = probabilityPerState[data[i]-1]\n",
+    "        ###\n",
+    "        # Определить с помощью state и self.fairDiceStateProbability/self.unfairDiceStateProbability\n",
+    "        Fair2Current, Unfair2Current = 0,0 \n",
+    "        ###\n",
+    "        probability = probabilityPerState * (max(self.pathProbabilities[index-1][0]*Fair2Current,self.pathProbabilities[index-1][1]*Unfair2Current))\n",
+    "        argmax = self.ptr(index, Fair2Current, Unfair2Current)\n",
+    "        \n",
+    "        self.pathProbabilities.append(probability)\n",
+    "        self.ptrStates[-1].append(argmax)\n",
+    "    \n",
+    "    def __call__(self):\n",
+    "        # Рекурсия\n",
+    "        for i in range(1,self.L):\n",
+    "            self.step(i)\n",
+    "                \n",
+    "        # Завершение\n",
+    "        pass\n",
+    "        # Обратный ход\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax([1,2,1])"
+   ]
   },
   {
    "cell_type": "code",
@@ -266,7 +339,7 @@
     "        return self.pathProbability\n",
     "    \n",
     "    def initialization(self):\n",
-    "        #Init self.L - 1\n",
+    "        #Init self.L - 1 КАК ИНИЦИАОИЗИРОВАТЬ?\n",
     "        pass\n",
     "        #Recursion\n",
     "        for i in range(2,self.L): # С двойки?\n",
