del old viterbi

--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -143,53 +143,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class algorithmViterbi(baseAlgo):\n",
-    "    def __init__(self, data, fairDiceStateProbability,\n",
-    "                 unfairDiceStateProbability, unfairDice, fairDice = None):\n",
-    "        baseAlgo.__init__(self, data, fairDiceStateProbability,\n",
-    "                 unfairDiceStateProbability, unfairDice, fairDice = None)\n",
-    "        self.v = [0 for i in range(self.L)]\n",
-    "        self.v[0] = 1\n",
-    "        \n",
-    "        self.pathProbabilities = []\n",
-    "        self.ptrStates = []\n",
-    "        \n",
-    "        \n",
-    "    def ptr(self,index, Fair2Current, Unfair2Current):\n",
-    "        return 'Fair' if self.pathProbabilities[index-1][0]*Fair2Current > self.pathProbabilities[index-1][1]*Unfair2Current else 'Unfar'\n",
-    "        \n",
-    "    def _stepRecursion(self, index, state, probabilityPerState):\n",
-    "        probabilityObservationsInState = probabilityPerState[data[i]-1]\n",
-    "        ###\n",
-    "        # Определить с помощью state и self.fairDiceStateProbability/self.unfairDiceStateProbability\n",
-    "        Fair2Current, Unfair2Current = 0,0 \n",
-    "        ###\n",
-    "        probability = probabilityPerState * (max(self.pathProbabilities[index-1][0]*Fair2Current,self.pathProbabilities[index-1][1]*Unfair2Current))\n",
-    "        argmax = self.ptr(index, Fair2Current, Unfair2Current)\n",
-    "        \n",
-    "        self.pathProbabilities.append(probability)\n",
-    "        self.ptrStates[-1].append(argmax)\n",
-    "    \n",
-    "    def __call__(self):\n",
-    "        # Рекурсия\n",
-    "        for i in range(1,self.L):\n",
-    "            self.pathProbabilitie.append([])\n",
-    "            self.ptrStates.append([])\n",
-    "            for state, probability in zip(['Fair','Unfair'],[self.fairDice, self.unfairDice]):\n",
-    "                self._stepRecursion(i,state,probability)\n",
-    "                \n",
-    "        # Завершение\n",
-    "        pass\n",
-    "        # Обратный ход\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -199,17 +152,10 @@
     "                 unfairDiceStateProbability, unfairDice, fairDice = None):\n",
     "        baseAlgo.__init__(self, data, fairDiceStateProbability,\n",
     "                 unfairDiceStateProbability, unfairDice, fairDice = None)\n",
-    "        self.v = np.array([])\n",
-    "        self.v.append([1,0]) # Не уверен, вынести в initilization\n",
     "        \n",
-    "        # self.pathProbabilities = []\n",
-    "        # self.ptrStates = []\n",
-    "        self.ptr = np.array([])\n",
-    "        \n",
-    "        \n",
-    "    def _ptr(self,index, Fair2Current, Unfair2Current):\n",
-    "        return 'F' if self.pathProbabilities[index-1][0]*Fair2Current > self.pathProbabilities[index-1][1]*Unfair2Current else 'U'\n",
-    "       \n",
+    "        self.v = None\n",
+    "        self.ptr = None\n",
+    "\n",
     "    def step(self):\n",
     "        self.v.append([])\n",
     "        self.ptrStates.append([])\n",
@@ -223,49 +169,24 @@
     "            self.v[-1].append(probability)\n",
     "            self.ptr[-1].append(ptr)\n",
     "            \n",
-    "            \n",
-    "    \n",
-    "    def _stepRecursion(self, index,probabilityPerState):\n",
-    "        probabilityObservationsInState = probabilityPerState[data[i]-1]\n",
-    "        ###\n",
-    "        # Определить с помощью state и self.fairDiceStateProbability/self.unfairDiceStateProbability\n",
-    "        Fair2Current, Unfair2Current = 0,0 \n",
-    "        ###\n",
-    "        probability = probabilityPerState * (max(self.pathProbabilities[index-1][0]*Fair2Current,self.pathProbabilities[index-1][1]*Unfair2Current))\n",
-    "        argmax = self.ptr(index, Fair2Current, Unfair2Current)\n",
-    "        \n",
-    "        self.pathProbabilities.append(probability)\n",
-    "        self.ptrStates[-1].append(argmax)\n",
-    "    \n",
     "    def __call__(self):\n",
+    "        if lself.ptr == None: self.initialization()\n",
+    "        return self.ptr\n",
+    "        \n",
+    "        \n",
+    "    def initialization(self):\n",
+    "        self.ptr = np.array([])\n",
+    "        self.v = np.array([])\n",
+    "        self.v.append([1,0]) # Не уверен\n",
+    "        \n",
     "        # Рекурсия\n",
     "        for i in range(1,self.L):\n",
     "            self.step(i)\n",
     "                \n",
     "        # Завершение\n",
-    "        pass\n",
+    "        \n",
     "        # Обратный ход\n",
     "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argmax([1,2,1])"
    ]
   },
   {
