--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -155,6 +155,7 @@
     "        \n",
     "        self.v = None\n",
     "        self.ptr = None\n",
+    "        self.path = None\n",
     "\n",
     "    def step(self):\n",
     "        self.v.append([])\n",
@@ -170,13 +171,16 @@
     "            self.ptr[-1].append(ptr)\n",
     "            \n",
     "    def __call__(self):\n",
-    "        if lself.ptr == None: self.initialization()\n",
-    "        return self.ptr\n",
+    "        if self.path == None: self.initialization()\n",
+    "        return self.path\n",
     "        \n",
     "        \n",
     "    def initialization(self):\n",
+    "        \n",
     "        self.ptr = np.array([])\n",
     "        self.v = np.array([])\n",
+    "        self.path = np.array([])\n",
+    "        \n",
     "        self.v.append([1,0]) # Не уверен\n",
     "        \n",
     "        # Рекурсия\n",
@@ -184,9 +188,15 @@
     "            self.step(i)\n",
     "                \n",
     "        # Завершение\n",
+    "        self.Probability = max(self.v[-1])\n",
+    "        ptr, index = ('F', 0) if np.argmax(self.v[-1]) == 0 else ('U', 1)\n",
+    "        self.path.append(ptr)\n",
     "        \n",
     "        # Обратный ход\n",
-    "        pass"
+    "        for step in range(self.L,0,-1):\n",
+    "            ptr, index = ('F', 0) if self.ptr[step][index] == 'F' else ('U', 1) \n",
+    "            self.path.append(ptr)\n",
+    "        self.path = self.path[::-1]"
    ]
   },
   {
