--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -29,15 +29,15 @@
      "output_type": "stream",
      "text": [
       "(1, 'F')\n",
-      "(6, 'F')\n",
-      "(2, 'U')\n",
+      "(3, 'F')\n",
       "(3, 'U')\n",
       "(1, 'U')\n",
-      "(2, 'U')\n",
       "(4, 'U')\n",
-      "(2, 'F')\n",
+      "(5, 'F')\n",
       "(3, 'F')\n",
-      "(1, 'F')\n"
+      "(3, 'F')\n",
+      "(1, 'F')\n",
+      "(2, 'F')\n"
      ]
     }
    ],
@@ -52,6 +52,21 @@
    "metadata": {},
    "source": [
     "Сгенерируем датасеты размером 1 000, 10 000 и 100 000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset300 = []\n",
+    "dataset300Labels = []\n",
+    "\n",
+    "for i in range(300):\n",
+    "    data, label = casino()\n",
+    "    dataset300.append(data)\n",
+    "    dataset300Labels.append(label)"
    ]
   },
   {
@@ -108,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,32 +133,25 @@
     "        self.data = data\n",
     "        self.L = len(data)\n",
     "        \n",
-    "        if fairDice == None: self.fairDice = [1/6 for i in range(6)]\n",
-    "        else: self.fairDice = fairDice\n",
-    "        self.unfairDice = unfairDice\n",
+    "        if fairDice == None: self.fairDice = np.array([1/6 for i in range(6)])\n",
+    "        else: self.fairDice = np.array(fairDice)\n",
+    "        self.unfairDice = np.array(unfairDice)\n",
     "        \n",
     "        # Возможно стоит сделать вида \n",
     "        self.toFairState = np.array([fairDiceStateProbability[0],unfairDiceStateProbability[0]])\n",
     "        self.toUnfariState = np.array([fairDiceStateProbability[1],unfairDiceStateProbability[1]])\n",
     "        \n",
-    "        self.fairDiceStateProbability = fairDiceStateProbability\n",
-    "        self.unfairDiceStateProbability = unfairDiceStateProbability\n",
+    "        self.fairDiceStateProbability = np.array(fairDiceStateProbability)\n",
+    "        self.unfairDiceStateProbability = np.array(unfairDiceStateProbability)\n",
     "        \n",
     "        self.states = ['Fair','Unfair']\n",
     "        self.dices = [self.fairDice,self.unfairDice]\n",
-    "        self.transitions = [self.toFairState, self.toUnfariState]\n",
-    "        \n",
-    "        self.path = [] #Вынести, так как прямой и обратной ход для другого"
+    "        self.transitions = [self.toFairState, self.toUnfariState]"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,9 +165,9 @@
     "        self.ptr = None\n",
     "        self.path = None\n",
     "\n",
-    "    def step(self):\n",
+    "    def step(self,index):\n",
     "        self.v.append([])\n",
-    "        self.ptrStates.append([])\n",
+    "        self.ptr.append([])\n",
     "        for transitionProbability, probability in zip(self.transitions, self.dices):\n",
     "            observedProbability = probability[self.data[i]-1]\n",
     "            previuosState = self.v[index-1]\n",
@@ -177,9 +185,9 @@
     "        \n",
     "    def initialization(self):\n",
     "        \n",
-    "        self.ptr = np.array([])\n",
-    "        self.v = np.array([])\n",
-    "        self.path = np.array([])\n",
+    "        self.ptr = []\n",
+    "        self.v = []\n",
+    "        self.path = []\n",
     "        \n",
     "        self.v.append([1,0]) # Не уверен\n",
     "        \n",
@@ -193,11 +201,35 @@
     "        self.path.append(ptr)\n",
     "        \n",
     "        # Обратный ход\n",
-    "        for step in range(self.L,0,-1):\n",
+    "        for step in range(self.L - 2,0,-1):\n",
     "            ptr, index = ('F', 0) if self.ptr[step][index] == 'F' else ('U', 1) \n",
     "            self.path.append(ptr)\n",
     "        self.path = self.path[::-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hackCasinoViterbi = algorithmViterbi(dataset300, [0.95,0.05],[0.1,0.9],[0.1,0.1,0.1,0.1,0.1,1/2])\n",
+    "hackCasinoViterbi()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -238,6 +270,43 @@
     "            self.step(i)\n",
     "        self.pathProbability = sum(self.f[-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hackCasino = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -282,22 +351,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3, 16])"
+       "array([-0.69314718, -0.69314718])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.array([1,2])*np.array([3,4])*np.array([1,2])"
+    "a = np.array([,1/2])\n",
+    "np.log(a)"
    ]
   },
   {
