viterbi  to log

--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +133,16 @@
     "        self.data = data\n",
     "        self.L = len(data)\n",
     "        \n",
-    "        if fairDice == None: self.fairDice = np.array([1/6 for i in range(6)])\n",
-    "        else: self.fairDice = np.array(fairDice)\n",
-    "        self.unfairDice = np.array(unfairDice)\n",
+    "        if fairDice == None: self.fairDice = np.log([1/6 for i in range(6)])\n",
+    "        else: self.fairDice = np.log(fairDice)\n",
+    "        self.unfairDice = np.log(unfairDice)\n",
     "        \n",
     "        # Возможно стоит сделать вида \n",
-    "        self.toFairState = np.array([fairDiceStateProbability[0],unfairDiceStateProbability[0]])\n",
-    "        self.toUnfariState = np.array([fairDiceStateProbability[1],unfairDiceStateProbability[1]])\n",
+    "        self.toFairState = np.log([fairDiceStateProbability[0],unfairDiceStateProbability[0]])\n",
+    "        self.toUnfariState = np.log([fairDiceStateProbability[1],unfairDiceStateProbability[1]])\n",
     "        \n",
-    "        self.fairDiceStateProbability = np.array(fairDiceStateProbability)\n",
-    "        self.unfairDiceStateProbability = np.array(unfairDiceStateProbability)\n",
+    "        self.fairDiceStateProbability = np.log(fairDiceStateProbability)\n",
+    "        self.unfairDiceStateProbability = np.log(unfairDiceStateProbability)\n",
     "        \n",
     "        self.states = ['Fair','Unfair']\n",
     "        self.dices = [self.fairDice,self.unfairDice]\n",
@@ -172,8 +172,12 @@
     "            observedProbability = probability[self.data[i]-1]\n",
     "            previuosState = self.v[index-1]\n",
     "            \n",
-    "            probability = observedProbability * np.max(previuosState*transitionProbability)\n",
-    "            ptr = 'F' if np.argmax(previuosState*transitionProbability) == 0 else 'U'\n",
+    "            #probability = observedProbability * np.max(previuosState*transitionProbability)\n",
+    "            #ptr = 'F' if np.argmax(previuosState*transitionProbability) == 0 else 'U'\n",
+    "            \n",
+    "            probability = observedProbability + np.max(previuosState + transitionProbability)\n",
+    "            ptr = 'F' if np.argmax(previuosState + transitionProbability) == 0 else 'U'\n",
+    "            \n",
     "            \n",
     "            self.v[-1].append(probability)\n",
     "            self.ptr[-1].append(ptr)\n",
@@ -219,10 +223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(np.log([10,10]))"
+   ]
   },
   {
    "cell_type": "code",
