add result probability show

--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,17 +208,350 @@
     "        for step in range(self.L - 2,0,-1):\n",
     "            ptr, index = ('F', 0) if self.ptr[step][index] == 'F' else ('U', 1) \n",
     "            self.path.append(ptr)\n",
-    "        self.path = self.path[::-1]"
+    "        self.path = self.path[::-1]\n",
+    "        \n",
+    "    def probability(self):\n",
+    "        return np.e**self.Probability"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2776991284738255e-239"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hackCasinoViterbi = algorithmViterbi(dataset300, [0.95,0.05],[0.1,0.9],[0.1,0.1,0.1,0.1,0.1,1/2])\n",
-    "hackCasinoViterbi()"
+    "result = hackCasinoViterbi()\n",
+    "hackCasinoViterbi.probability()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F',\n",
+       " 'F']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
    ]
   },
   {
@@ -243,10 +576,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.718281828459045"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.e"
+   ]
   },
   {
    "cell_type": "code",
