init forward-backward algo

--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -479,6 +479,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class baseAlgo():\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.L = len(data)\n",
+    "        \n",
+    "        self.states = ['F','U'] # F for Fair state, U for Unfair state\n",
+    "        self.transitionsProbability = {\n",
+    "            'F': np.array([0.95,0.05]), # to F, to U\n",
+    "            'U': np.array([0.1,0.9]) # to F, to U\n",
+    "        }\n",
+    "        \n",
+    "        self.startProbability = {\n",
+    "            'F': 2/3,\n",
+    "            'U': 1/3\n",
+    "        }\n",
+    "        \n",
+    "        self.diceValues = [1,2,3,4,5,6]\n",
+    "        self.diceValueProbability = {\n",
+    "            'F': [1/6 for i in range(6)],\n",
+    "            'U': [.1,.1,.1,.1,.1,.5]\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class forwardAlgorithm(baseAlgo):\n",
+    "    def __init__(self, data):\n",
+    "        baseAlgo.__init__(self, data)\n",
+    "        \n",
+    "        self.f = np.array([])\n",
+    "        self.pathProbability = None\n",
+    "    \n",
+    "    def step(self, index):\n",
+    "        self.f.append([])\n",
+    "        for transitionProbability, probability in zip(self.transitionsProbability, self.diceValueProbability):\n",
+    "            observedProbability = self.diceValueProbability[state][self.data[index] - 1]\n",
+    "            previuosState = self.f[index-1]\n",
+    "            \"\"\"\n",
+    "            observedProbability: вероятсность наблюдения при текущем состояние\n",
+    "            transitionProbability: вероятность перехода с кубика на кубик\n",
+    "            \"\"\"\n",
+    "            probability = observedProbability * sum(previuosState * transitionProbability)\n",
+    "            self.f[-1].append(probability)\n",
+    "    \n",
+    "    def __call__(self):\n",
+    "        if self.pathProbability == None: self.initialization()\n",
+    "        return self.pathProbability\n",
+    "    \n",
+    "    def initialization(self):\n",
+    "        # Init\n",
+    "        self.f.append([1,0]) # Не уверен\n",
+    "        # Recursion\n",
+    "        for i in range(1,self.L):\n",
+    "            self.step(i)\n",
+    "        self.pathProbability = sum(self.f[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class backwardAlgorithm(baseAlgo):\n",
+    "    def __init__(self, data):\n",
+    "        baseAlgo.__init__(self, data)\n",
+    "        \n",
+    "        self.b = np.array([])\n",
+    "        self.pathProbability = None\n",
+    "    \n",
+    "    def step(self, index):\n",
+    "        self.b.append([])\n",
+    "        for transitionProbability in self.transitionsProbability: # first fair then unfair\n",
+    "            observedProbability = self.diceValueProbability[state][self.data[index] - 1] #  Check\n",
+    "            for probability in self.dices\n",
+    "                observedProbability.append(probability[self.data[index]])\n",
+    "            nextState = self.b[index-1]\n",
+    "            \n",
+    "            probability = sum(transitionProbability * observedProbability * nextState)\n",
+    "            self.b[-1].append(probability)\n",
+    "    \n",
+    "    def __call__(self):\n",
+    "        if self.pathProbability == None: self.initialization()\n",
+    "        return self.pathProbability\n",
+    "    \n",
+    "    def initialization(self):\n",
+    "        #Init self.L - 1 КАК ИНИЦИАОИЗИРОВАТЬ?\n",
+    "        pass\n",
+    "        #Recursion\n",
+    "        for i in range(2,self.L): # С двойки?\n",
+    "            self.step(i)\n",
+    "        # Finish # перевернуть b\n",
+    "        self.b = self.b[::-1]\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class backwardforwardAlgorithm(baseAlgo):\n",
+    "    def __init__(self, data):\n",
+    "        baseAlgo.__init__(self, data)\n",
+    "        \n",
+    "    def step(self, init):\n",
+    "        pass\n",
+    "    \n",
+    "    def __call__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def initialization(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
