--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,12 +480,13 @@
     "    def __init__(self, data):\n",
     "        baseAlgo.__init__(self, data)\n",
     "        \n",
-    "        self.f = np.array([])\n",
+    "        self.f = []\n",
     "        self.pathProbability = None\n",
     "    \n",
     "    def step(self, index):\n",
     "        self.f.append([])\n",
-    "        for transitionProbability, probability in zip(self.transitionsProbability, self.diceValueProbability):\n",
+    "        for state in self.states:\n",
+    "            transitionProbability = self.transitionsProbability[state]\n",
     "            observedProbability = self.diceValueProbability[state][self.data[index] - 1]\n",
     "            previuosState = self.f[index-1]\n",
     "            \"\"\"\n",
@@ -501,11 +502,32 @@
     "    \n",
     "    def initialization(self):\n",
     "        # Init\n",
-    "        self.f.append([1,0]) # Не уверен\n",
+    "        self.f.append([self.startProbability[state] for state in self.states]) # Не уверен\n",
     "        # Recursion\n",
     "        for i in range(1,self.L):\n",
     "            self.step(i)\n",
     "        self.pathProbability = sum(self.f[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3542476897034294e-222"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forwardHack = forwardAlgorithm(dataset300)\n",
+    "forwardHack()"
    ]
   },
   {
