finish bacward not sure if it is correct

--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,16 +540,15 @@
     "    def __init__(self, data):\n",
     "        baseAlgo.__init__(self, data)\n",
     "        \n",
-    "        self.b = np.array([])\n",
+    "        self.b = []\n",
     "        self.pathProbability = None\n",
     "    \n",
     "    def step(self, index):\n",
     "        self.b.append([])\n",
-    "        for transitionProbability in self.transitionsProbability: # first fair then unfair\n",
-    "            observedProbability = self.diceValueProbability[state][self.data[index] - 1] #  Check\n",
-    "            for probability in self.dices\n",
-    "                observedProbability.append(probability[self.data[index]])\n",
-    "            nextState = self.b[index-1]\n",
+    "        for state in self.states: # first fair then unfair\n",
+    "            transitionProbability = self.transitionsProbability[state]\n",
+    "            observedProbability = self.diceValueProbability[state][self.data[index] - 1]\n",
+    "            nextState = self.b[-2]\n",
     "            \n",
     "            probability = sum(transitionProbability * observedProbability * nextState)\n",
     "            self.b[-1].append(probability)\n",
@@ -559,14 +558,39 @@
     "        return self.pathProbability\n",
     "    \n",
     "    def initialization(self):\n",
-    "        #Init self.L - 1 КАК ИНИЦИАОИЗИРОВАТЬ?\n",
-    "        pass\n",
+    "        \n",
+    "        self.b.append([1 for state in self.states])\n",
     "        #Recursion\n",
-    "        for i in range(2,self.L): # С двойки?\n",
+    "        for i in range(self.L-1,1,-1): # С двойки?\n",
     "            self.step(i)\n",
+    "            \n",
     "        # Finish # перевернуть b\n",
     "        self.b = self.b[::-1]\n",
-    "        pass"
+    "        self.pathProbability = sum([\n",
+    "            self.transitionsProbability[state]*self.diceValueProbability[state][self.data[0] - 1] \n",
+    "            for state in self.states] * np.array(self.b[0]))\n",
+    "        self.pathProbability = sum(self.pathProbability)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.225111988619696e-222"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backwardHack = backwardAlgorithm(dataset300)\n",
+    "backwardHack()"
    ]
   },
   {
@@ -575,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class backwardforwardAlgorithm(baseAlgo):\n",
+    "class PosteriorDecoding(baseAlgo):\n",
     "    def __init__(self, data):\n",
     "        baseAlgo.__init__(self, data)\n",
     "        \n",
